# prysm

./: .bazelrc
beacon-chain/core/altair/: epoch_precompute.go
beacon-chain/core/epoch/precompute/: BUILD.bazel  attestation.go  reward_penalty.go
beacon-chain/core/helpers/: block.go
beacon-chain/core/time/: slot_epoch.go
beacon-chain/rpc/apimiddleware/: structs_marshalling.go  structs_marshalling_test.go
beacon-chain/rpc/eth/validator/: validator_test.go
beacon-chain/rpc/statefetcher/: BUILD.bazel
beacon-chain/state/: interfaces.go
testing/endtoend/components/: validator.go
testing/endtoend/evaluators/: fork.go  operations.go  slashing.go
validator/client/: validator.go
validator/client/beacon-api/: BUILD.bazel  activation.go  attester_slashings.go  attester_slashings_helpers.go  attester_slashings_helpers_test.go  attester_slashings_test.go  beacon_api_beacon_chain_client.go  beacon_api_grpc_fallback_flags.go  beacon_api_helpers.go  beacon_api_no_fallback_flags.go  beacon_api_slasher_client.go  beacon_api_validator_client.go  beacon_block_proto_helpers.go  beacon_block_proto_helpers_test.go  beacon_state_helpers.go  beacon_state_helpers_test.go  domain_data.go  fork_version.go  genesis.go  genesis_test.go  get_sync_subcommittee_index.go  json_types.go  state_validators.go  validator_status.go
validator/client/beacon-api/mock/: state_validators_mock.go
validator/client/validator-client-factory/: BUILD.bazel  beacon_api_validator_client_factory.go
validator/node/: node.go
validator/rpc/: beacon.go  server.go
