load("@prysm//tools/go:def.bzl", "go_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(
    name = "use_beacon_api_grpc_fallback",
    build_setting_default = False,
)

config_setting(
    name = "beacon_api_grpc_fallback_usage",
    flag_values = {
        ":use_beacon_api_grpc_fallback": "true",
    },
)

# Gazelle will flag this for removal since it's only being used with the use_beacon_api flag, but it should be kept
# keep
go_library(
    name = "go_default_library",
    srcs = ["beacon_api_validator_client.go"] + select({
        ":beacon_api_grpc_fallback_usage": ["beacon_api_grpc_fallback_flags.go"],
        "//conditions:default": ["beacon_api_no_fallback_flags.go"],
    }),
    importpath = "github.com/prysmaticlabs/prysm/v3/validator/client/beacon-api",
    visibility = ["//validator:__subpackages__"],
    deps = [
        "//beacon-chain/rpc/apimiddleware:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//validator/client/iface:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
